[package]
name = "serde_zzz"
version = "0.0.1"
authors = ["MouseProducedGames <largemouse@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruzzzt = { path = "../ruzzzt" }
serde = { version = "1.0.117", features = ["derive"] }
